<resources>
    <string name="app_name">HamburgueriaZ</string>
    <string name="fazer_pedido">Faça seu pedido!</string>
    <string name="nome_cliente">Nome</string>
    <string name="igrediente_bacon">Bacon</string>
    <string name="igrediente_queijo">Queijo</string>
    <string name="igrediente_orion">Orion Rings</string>
    <string name="quantidade">Quantidade</string>
    <string name="subtrair_quantidade">-</string>
    <string name="adicionar_quantidade">+</string>
    <string name="valor_quantidade">0</string>
    <string name="resumo_pedido">Resumo do pedido</string>
    <string name="valor_pedido">R$ 0</string>
    <string name="botao_pedido">Fazer Pedido</string>
    <string name="descricao_hamburguer">Imagem ilustrativa de um hamburguer</string>
</resources>