<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="417dp"
                android:layout_height="66dp"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:textSize="22sp"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleTextColor="@color/white" />

            <ImageView
                android:id="@+id/image_hamburguer"
                android:layout_width="358dp"
                android:layout_height="151dp"
                android:layout_marginStart="13dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="13dp"
                android:contentDescription="@string/descricao_hamburguer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:srcCompat="@drawable/hamburguer_image"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/facaPedido"
                style="@style/EstiloTexto"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:text="@string/fazer_pedido"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_hamburguer"
                tools:ignore="TextContrastCheck" />

            <EditText
                android:id="@+id/nomeCliente"
                android:layout_width="371dp"
                android:layout_height="50dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/nome_cliente"
                android:maxLength="40"
                android:inputType="textPersonName"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/facaPedido" />

            <CheckBox
                android:id="@+id/ingrediente1"
                android:layout_width="98dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="11dp"
                android:text="@string/igrediente_bacon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nomeCliente" />

            <CheckBox
                android:id="@+id/ingrediente2"
                android:layout_width="98dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/igrediente_queijo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingrediente1" />

            <CheckBox
                android:id="@+id/ingrediente3"
                android:layout_width="127dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:text="@string/igrediente_orion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingrediente2" />

            <TextView
                android:id="@+id/quantidade"
                style="@style/EstiloTexto"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/quantidade"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ingrediente3" />

            <Button
                android:id="@+id/subtrairQuantidade"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:text="@string/subtrair_quantidade"
                app:layout_constraintEnd_toStartOf="@+id/valorQuantidade"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quantidade" />

            <TextView
                android:id="@+id/valorQuantidade"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/valor_quantidade"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/adicionarQuantidade"
                app:layout_constraintStart_toEndOf="@+id/subtrairQuantidade"
                app:layout_constraintTop_toBottomOf="@+id/quantidade" />

            <Button
                android:id="@+id/adicionarQuantidade"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="@string/adicionar_quantidade"
                app:layout_constraintStart_toEndOf="@+id/valorQuantidade"
                app:layout_constraintTop_toBottomOf="@+id/quantidade" />

            <TextView
                android:id="@+id/pedido"
                style="@style/EstiloTexto"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:text="@string/resumo_pedido"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/subtrairQuantidade" />

            <TextView
                android:id="@+id/valor_pedido"
                style="@style/EstiloTexto"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/valor_pedido"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pedido" />

            <Button
                android:id="@+id/botaoPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:text="@string/botao_pedido"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/valor_pedido" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>